log
Fri, May 16, 2025  9:45:08 PM: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  9:47:50 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:15: error: implicit declaration of function 'addToList' [-Werror=implicit-function-declaration]
               addToList(list,newNode);
               ^~~~~~~~~
cc1.exe: all warnings being treated as errors
8f9d7df
Fri, May 16, 2025  9:49:50 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e17a6ef
Fri, May 16, 2025  9:58:14 PM: 
 sudoku.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
             if (is_valid(newNode)){
                 ^~~~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:73:13: error: unused variable 'num' [-Werror=unused-variable]
         int num = n->sudo[i][j];
             ^~~
sudoku.c:69:28: error: unused variable 'box' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                            ^~~
sudoku.c:69:17: error: unused variable 'colum' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                 ^~~~~
sudoku.c:69:7: error: unused variable 'fila' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
       ^~~~
cc1.exe: all warnings being treated as errors
5f99584
Fri, May 16, 2025  9:58:22 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
             if (is_valid(newNode)){
                 ^~~~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:73:13: error: unused variable 'num' [-Werror=unused-variable]
         int num = n->sudo[i][j];
             ^~~
sudoku.c:69:28: error: unused variable 'box' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                            ^~~
sudoku.c:69:17: error: unused variable 'colum' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                 ^~~~~
sudoku.c:69:7: error: unused variable 'fila' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
       ^~~~
cc1.exe: all warnings being treated as errors
84d1178
Fri, May 16, 2025 10:00:40 PM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
             if (is_valid(newNode)){
                 ^~~~~~~~
cc1.exe: all warnings being treated as errors
c4efc96
Fri, May 16, 2025 10:02:37 PM: 
 sudoku.c | 42 +++++++++++++++++++++---------------------
 1 file changed, 21 insertions(+), 21 deletions(-)
 tests:  0|5
total_score: 0/70
634caff
